tests/declare_namespace_disabled/declare_namespace_disabled.exp
Error ------------------------------------------------------------------------------------------------------ test.js:1:1

`declare namespace` statement is not supported yet. [unsupported-syntax]

   1| declare namespace disallowed {} // error
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 1 error
